edit users,roles,permissions,department,to match needs

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/style.css": "/css/style.css",
+    "/img/equipment-bg.jpg":"/img/equipment-bg.jpg"
+
 }
