--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/style.css": "/css/style.css",
-    "/img/equipment-bg.jpg":"/img/equipment-bg.jpg"
-
+    "/css/app.css": "/css/app.css"
 }
